[tool.poetry]
name = "ai-agents-course"
version = "0.1.0"
description = ""
authors = ["eric-epsilla <eric@epsilla.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain-openai = "^0.1.14"
langgraph = "^0.1.5"
langchain-community = "^0.2.6"
pandas = "^2.2.2"
tavily-python = "^0.3.3"
streamlit = "^1.36.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
